# ai-data-analyst

./: .gitignore  DEVELOPMENT_PLAN.md  README.md  docker-compose.yml  requirements-streamlit.txt  start_agents_properly.ps1  start_all_agents.ps1  start_all_agents_simple.ps1
common_utils/: README.md  __init__.py  agent_cards.py  agent_discovery.py  base_agent_server.py  config_manager.py  data_handle_manager.py  enhanced_logging.py  health.py  output_manager.py  security.py  session_manager.py  workflow_manager.py
config/: system_config.yaml
data/: README.md
data-analyst-agent/: README.md  pyproject.toml
data-analyst-agent/data_analyst/: __main__.py  agent.py  agent_executor.py  prompt.py  tools.py
data-analyst-agent/data_analyst/analysis/: __init__.py  change_drivers.py  concentrated_contribution_alert.py  find_bottom_contributors.py  find_top_contributors.py  impact_analysis.py  metric_drilldown.py  metrics.py  momentum.py  multi_timeframe.py  narrative_drilldown.py  outliers.py  pop_change.py  quarterly_trend.py  ratio_decomposition.py  timeframe.py  top_detractors.py  trends.py
data-cleaning-agent/: README.md  pyproject.toml
data-cleaning-agent/data_cleaning_agent/: __init__.py  __main__.py  agent.py  agent_executor.py  prompt.py  tools.py
data-cleaning-agent/data_cleaning_agent/mcp_server/: __main__.py
data-cleaning-agent/tests/: test_tools.py
data-enrichment-agent/: README.md  pyproject.toml
data-enrichment-agent/data_enrichment_agent/: __init__.py  __main__.py  agent.py  agent_executor.py  prompt.py
data-enrichment-agent/tests/: test_tools.py
data-loader-agent/: README.md  pyproject.toml
data-loader-agent/data_loader/: __init__.py  __main__.py  agent.py  agent_executor.py  prompt.py
data-loader-agent/mcp_server/: server.py
docs/: CLI_USAGE_GUIDE.md  PROJECT_STRUCTURE.md  STREAMLIT_DASHBOARD_README.md  adding_agents.md  api_documentation.py  data_handle_workflow.md
docs/agent_template/: pyproject.toml
docs/api/: index.html  openapi.json  openapi.yaml
monitoring/: health_dashboard.py  metrics_collector.py  prometheus.yml
orchestrator-agent/orchestrator_agent/: __main__.py  a2a_client.py  agent.py  agent_executor.py  api.py  prompt.py  scheduler.py
presentation-agent/: README.md  pyproject.toml
presentation-agent/presentation_agent/: __init__.py  __main__.py  agent.py  agent_executor.py  prompt.py
rootcause-analyst-agent/: README.md  pyproject.toml
rootcause-analyst-agent/rootcause_analyst/: __init__.py  __main__.py  agent_executor.py  prompt.py
schema-profiler-agent/: README.md  pyproject.toml
schema-profiler-agent/schema_profiler/: __main__.py  agent_executor.py  directory_watcher.py  intelligent_profiler.py  profiler.py  prompt.py  tdsx_reader.py  yaml_writer.py
schema-profiler-agent/tests/: test_profiler.py
scripts/: README.md  framework_cli.py  launch_dashboard.py  run_dashboard.py  streamlit_dashboard.py  test_schema_profiler_ai.py
sessions/: sid_09c64bb784d14778997a373752201d1f.json  sid_22b60ba88d0e4c00ab44e03084b218c5.json  sid_9e87e4f2ca444612a48b47c8724e2545.json  sid_de7b265821fc485288d84181db832683.json  sid_ebe5c7e2ba424f1e869af1216b9d4837.json
test_data/: create_sample_data.py  malformed_data.csv  market_data.json  sales_data_small.csv
tests/: README.md  run_integration_tests.py
tests/integration/: TDSX_TEST_RESULTS.md  run_all_fixed_tests.py  simple_test_results_20250719_110224.json  simple_test_results_20250719_110325.json  simple_test_results_20250719_110406.json  single_agent_test_results_20250719_111349.json  test_a2a_imports.py  test_agents.py  test_data_loader_tdsx.py  test_full_pipeline.py  test_individual_agents.py  test_phase4_phase5_complete.py  test_production_analysis.py  test_production_scenarios.py  test_real_world_analysis.py  test_results_20250719_105422.json  test_results_individual_1752930016.json  test_rootcause_analyst.py  test_schema_profiler.py  test_simple_integration.py  test_simple_startup.py  test_single_agent_analysis.py  test_tdsx_complete.py  test_tdsx_final.py  test_tdsx_manual.py  test_tdsx_standalone.py
