[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data-cleaning-agent"
version = "0.1.0"
dependencies = [
    "pandas",
    "numpy",
    "a2a-sdk>=0.2.12",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.1",
]

[project.scripts]
start = "data_cleaning_agent.__main__:main"
