[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data-enrichment-agent"
version = "0.1.0"
dependencies = [
    "pandas",
    "numpy",
    "requests",
    "a2a-sdk>=0.2.12",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.1",
]

[project.scripts]
start = "data_enrichment_agent.__main__:main"
