[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "presentation-agent"
version = "0.1.0"
dependencies = [
    "matplotlib",
    "plotly",
    "Jinja2",
    "google-generativeai>=0.8.0",
    "a2a-sdk>=0.2.12",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.1",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
]

[project.scripts]
start = "presentation_agent.__main__:main"
