[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "{{AGENT_NAME}}"
version = "0.1.0"
dependencies = [
    # Core A2A dependencies
    "a2a-sdk>=0.2.12",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.1",
    
    # Add your specific dependencies here
    # "pandas",
    # "numpy",
    # "requests",
]

[project.scripts]
start = "{{PACKAGE_NAME}}.__main__:main" 